2005-04-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/grid-lines.ly (skips): refine example.

	* scm/define-context-properties.scm
	(all-user-translation-properties): doc autoBeamCheck

	* input/regression/grid-lines.ly (Module): new file.

	* lily/grid-point-engraver.cc (Module): new file

	* lily/grid-line.cc (Module): new file.

	* lily/grid-line-span-engraver.cc (Module): new file.

	* lily/grid-line-interface.cc (Module): new file.

2005-04-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/auto-beam.scm (revert-property-setting): Bugfixes: add
	missing parameter, actualy cdr through list.  Actually return a
	list with ENTRY removed (was '()).

	* scripts/convert-ly.py: Update.  Print warning if file cannot be
	opened.
	(do_conversion): Fix printing of continuation comma.

	* Documentation/user/advanced-notation.itely (Beam formatting):
	Remove refbugs about compound time and mixed duration.

	* scm/auto-beam.scm (default-auto-beam-settings): Write out all
	modulo moments explicitely.

	* lily/moment.cc (operator %): New function.

	* lily/moment-scheme.cc (ly:mod-moment): Wrap it.

	* lily/translator-scheme.cc (ly:translator-now,
	ly:translator-property): New function.

	* scm/auto-beam.scm (default-auto-beam-check): New function.

	* lily/auto-beam-engraver.cc (test_moment): Use it.

	* flower/rational.cc (operator %): Bugfix.

2005-04-21  Erik Sandberg  <ersa9195@student.uu.se>

	* scripts/abc2ly: Bugfix

2005-04-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/fontextract.py (write_extracted_fonts): bugfix, too many
	%'s on EndFont comment.

	* lily/ledger-line-spanner.cc: some more words of explanation.

	* scripts/lilypond-book.py: patches by John Williams:
	htmlquote bugfix.
	Allow snippets to be given distinct filenames.
	Allow the default alt text to be overridden.

2005-04-20  Erik Sandberg  <ersa9195@student.uu.se>

	* ly/performer-init.ly: Bugfix

	* THANKS: Added bughunters.

2005-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>
